Created Eninge class that will run everithing

--- a/ACS.Client/Index.html
+++ b/ACS.Client/Index.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <div class="navbar-brand">Star Trek</div>
+                <div id="Page Title" class="navbar-brand">Star Trek</div>
             </div>
         </div>
     </nav>
