Added more tests

--- a/ACS.Client/app/crewmanifest/crewmanifest.html
+++ b/ACS.Client/app/crewmanifest/crewmanifest.html
@@ -6,7 +6,7 @@
                 {{crewManifest.Name}}
             </div>
             <div class="pull-right">
-                <button class="btn btn-default" ng-click="open('lg', crewManifest.Crew)">Add and Remove Crew</button>
+                <button id="AddandRemoveCrew"class="btn btn-default" ng-click="open('lg', crewManifest.Crew)">Add and Remove Crew</button>
             </div>
         </div>
 
